# ShellBot-OS

./: README.md  TOKEN.txt  bios.py  cdrom.py  custOS.py  kern.py  kernel.py  knet.py  main.py  manual  pyproject.toml  up.py
Userfolder/: rec.py
systpak/: cdrom-new.py  keep_alive-new.py  kern-new.py  syst-new.py  up-new.py
